examples/misc/error/compilation/trace_gen.bfr
let b = [
  + 0
]

let main = $

**let {} = {} in
  let {} = {} in $  // これはトレースしたくない

*b